# src/controllers/movie-controller.ts
@@ -12,6 +12,9 @@ export const getMovies = async (
   next: NextFunction
 ) => {
   try {
+    // validateId(req.user.id)
+
+    // const movies = await Movie.find({ createdBy: req.user.id })
     const movies = await Movie.find()
       .select('-__v')
       .populate(moviePopulateQuery)
@@ -76,6 +79,7 @@ export const addMovie = async (
       ...req.body,
       image: `${getApiUrl()}/${req.file.path}`,
       createdBy,
+      quotes: [],
     }
 
     const response = await Movie.create(movie)
